--- a/lista 13  - (vetores)/ex15.html
+++ b/lista 13  - (vetores)/ex15.html
@@ -50,7 +50,7 @@
                 maior = listaPrecos[contador];
                 nome_maior = listaProdutos[contador]
             }
-            if (listaPrecos[contador] < menor) {
+            if (listaPrecos[contador] <= menor) {
                 menor = listaPrecos[contador];
                 nome_menor = listaProdutos[contador]
             }
