--- a/lista 14 - (numeros aleatorios)/ex4.html
+++ b/lista 14 - (numeros aleatorios)/ex4.html
@@ -15,9 +15,10 @@
 </html>
 <script>
     function sortear() {
-        var aleatorio = Math.random() * (6 - 1) + 1;
+        // var aleatorio = Math.random() * (10 - 0) + 0;
+        var aleatorio = Math.random() * 10;
 
-        p_msg.innerHTML = aleatorio.toFixed(0)
+        p_msg.innerHTML = aleatorio.toFixed(2)
 
     }
 </script>
